trunk/Archive2/12/4aefe0f32e3f0b/output
main.cpp:8:11: error: out of range
     std::printf("%d\n", PP_VARIADIC_ELEM(1, 1, 2, 3));
           ^
